Sequence Diagram [refs #10]

--- a/Documentation/UC10/UC10.md
+++ b/Documentation/UC10/UC10.md
@@ -18,3 +18,7 @@ As user I want to change directory
 
 - DIRECTORY_NAME doesn't exists.
     - System alerts the user for that and stays at the same location.
+
+## Design
+
+![uc10-sd](SD_UC10.jpg)
