Unit Tests documentation [refs #10]

--- a/Documentation/UC10/UC10.md
+++ b/Documentation/UC10/UC10.md
@@ -22,3 +22,23 @@ As user I want to change directory
 ## Design
 
 ![uc10-sd](SD_UC10.jpg)
+
+## Tests
+
+### Service
+
+- testChangeDir()
+    - test change working directory.
+
+- testChangeDir_go_back()
+    - test change working directory to the one before.
+
+- testChangeDir_to_root()
+    - test change working directory to root.
+
+- testChangeDir_invalid_new_location()
+
+### Controller
+
+- testChangeDir()
+    - test change working directory.
